--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -18,7 +18,7 @@ File: Layout CSS
 .row1, .row1 a{}
 .row2, .row2 a{}
 .row3, .row3 a{}
-.row4, .row4 a{}
+.row4, .row4 a{color: inherit;}
 .row5, .row5 a{}
 
 
@@ -245,7 +245,7 @@ nav ul, nav ol{margin:0; padding:0; list-style:none;}
 
 /* Tables
 --------------------------------------------------------------------------------------------------------------- */
-table, th, td{border:1px solid; border-collapse:collapse; vertical-align:top;}
+table, th, td{border:1px solid; border-collapse:collapse; vertical-align:top; font-size: 12px; line-height: 1.2em;}
 table, th{table-layout:auto;}
 table{width:100%; margin-bottom:15px;}
 th, td{padding:5px 8px;}
@@ -302,7 +302,7 @@ td{border-width:0 1px;}
 /* Colours
 --------------------------------------------------------------------------------------------------------------- */
 body{color:#474747; background-color:#FFFFFF;}
-a{color:#8BAAD6;}
+a{color:#AA0000;}
 a:active, a:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
 hr, .borderedbox{border-color:#D7D7D7;}
 label span{color:#FF0000; background-color:inherit;}
@@ -313,32 +313,32 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 .overlay.light{color:#474747;}
 .overlay.light::after{background-color:rgba(255,255,255,.7);}
 
-.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#8BAAD6; border-color:#8BAAD6;}
+.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#AA0000; border-color:#AA0000;}
 .btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}
 
 
 /* Rows */
 .row0, .row0 a{color:#FFFFFF; background-color:#000000;}
 .row1{color:#474747; background-color:#FFFFFF;}
-.row2{color:#FFFFFF; background-color:#8BAAD6;}
+.row2{color:#FFFFFF; background-color:#373737;}
 .row3{color:#474747; background-color:#FFFFFF;}
-.row4{color:#AAAAAA; background-color:#01325D;}
-.row5, .row5 a{color:#AAAAAA; background-color:#012B50;}
+.row4{color:#AAAAAA; background-color:#373737;}
+.row5, .row5 a{color:#AAAAAA; background-color:#AA0000;}
 .coloured{color:#FFFFFF; background-color:#000000;}
 
 
 /* Top Bar */
 #topbar ul li{border-color:rgba(255,255,255,.4);}
-#topbar div:first-of-type li:first-child a{color:#8BAAD6;}
+#topbar div:first-of-type li:first-child a{color:#AA0000;}
 
 
 /* Header */
 #header a{color:inherit;}
 #header form label::before{background-color:rgba(0,0,0,.1);}
 #header form label::after{color:#AAAAAA;}
-#header form label:hover::after{color:#8BAAD6;}
+#header form label:hover::after{color:#AA0000;}
 #header form label select{color:inherit; background-color:inherit; border-color:rgba(0,0,0,.2);}
-#header form label select option:not(:checked){color:#8BAAD6;}/* Options that are not selected - https://www.w3.org/TR/selectors/#checked-pseudo */
+#header form label select option:not(:checked){color:#AA0000;}/* Options that are not selected - https://www.w3.org/TR/selectors/#checked-pseudo */
 #header form label select option:disabled{color:inherit;}
 
 
@@ -349,8 +349,8 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 /* Content Area */
 #introblocks article{box-shadow:0px 0px 8px rgba(0,0,0,.1);}
 #introblocks article:hover{background-color:rgba(0,0,0,.02);}
-#introblocks article i{color:#8BAAD6; border-color:#D7D7D7;}
-#introblocks article a > i:hover, #introblocks article:hover i{color:#FFFFFF; background-color:#8BAAD6; border-color:#8BAAD6;}
+#introblocks article i{color:#373737; border-color:#D7D7D7;}
+#introblocks article a > i:hover, #introblocks article:hover i{color:#FFFFFF; background-color:#373737; border-color:#373737;}
 
 .overview > li figure a::after{background-color:rgba(0,0,0,.5);}
 .overview > li figure figcaption{color:#FFFFFF;}
@@ -362,33 +362,33 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 
 #footer input, #footer button{border-color:transparent;}
 #footer input{color:#FFFFFF; background-color:#012B50;}
-#footer input:focus{border-color:#8BAAD6;}
-#footer button{color:#FFFFFF; background-color:#8BAAD6;}
+#footer input:focus{border-color:#AA0000;}
+#footer button{color:#FFFFFF; background-color:#AA0000;}
 
 
 /* Navigation */
-#mainav{color:#FFFFFF; background-color:#8BAAD6;}
+#mainav{color:#FFFFFF; background-color:#373737;}
 #mainav li a{color:inherit;}
-#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#01325D; background-color:inherit;}
-#mainav li li a, #mainav .active li a{color:#FFFFFF; background-color:rgba(139,170,214,0.9);/* #8BAAD6 */ border-color:rgba(0,0,0,.9);}
-#mainav li li:hover > a, #mainav .active .active > a{color:#01325D; background-color:#8BAAD6;}
+#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#AA0000; background-color:inherit;}
+#mainav li li a, #mainav .active li a{color:#373737; background-color:rgba(210,210,210,0.9);/* #AA0000 */ border-color:rgba(0,0,0,.9);}
+#mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:#AA0000;}
 #mainav form select{color:#474747; background-color:#FFFFFF;}
 
 #breadcrumb a{color:inherit; background-color:inherit;}
-#breadcrumb li:last-child a{color:#8BAAD6;}
+#breadcrumb li:last-child a{color:#AA0000;}
 
 .container .sidebar nav a{color:inherit; border-color:#D7D7D7;}
-.container .sidebar nav a:hover{color:#8BAAD6;}
+.container .sidebar nav a:hover{color:#AA0000;}
 
 .pagination a, .pagination strong{border-color:#D7D7D7;}
-.pagination .current *{color:#FFFFFF; background-color:#8BAAD6;}
+.pagination .current *{color:#FFFFFF; background-color:#AA0000;}
 
-#backtotop{color:#FFFFFF; background-color:#8BAAD6;}
+#backtotop{color:#FFFFFF; background-color:#AA0000;}
 
 
 /* Tables + Comments */
 table, th, td, #comments .avatar, #comments input, #comments textarea{border-color:#D7D7D7;}
-#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#8BAAD6;}
+#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#AA0000;}
 th{color:#FFFFFF; background-color:#373737;}
 tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{color:inherit; background-color:#FBFBFB;}
 tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:#F7F7F7;}
