uprava kvuli rychlosti

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -152,7 +152,7 @@ address, article, aside, figcaption, figure, footer, header, main, nav, section{
 
 /* Header
 --------------------------------------------------------------------------------------------------------------- */
-#header{padding:20px 0;}
+#header{padding:15px 0;}
 
 #header #logo *{margin:0; padding:0;}
 #header #logo h1{font-size:24px;}
@@ -171,17 +171,17 @@ address, article, aside, figcaption, figure, footer, header, main, nav, section{
 
 /* Page Intro
 --------------------------------------------------------------------------------------------------------------- */
-#pageintro{padding:60px 0;}
+#pageintro{padding:200px 0;}
 
 #pageintro article{display:block; max-width:75%;}
-#pageintro .heading{margin-bottom:20px; font-size:4rem;}
-#pageintro p:first-of-type{margin:0 0 20px 0; text-transform:uppercase; font-size:1.6rem; letter-spacing:5px;}
+#pageintro .heading{margin-bottom:20px; font-size:5rem;}
+#pageintro p:first-of-type{margin:0 0 20px 0; font-size:1.8rem; letter-spacing:5px; line-height: 1.2}
 #pageintro footer{margin-top:50px;}
 
 
 /* Content Area
 --------------------------------------------------------------------------------------------------------------- */
-.container{padding:80px 0;}
+.container{padding:50px 0;}
 
 /* Content */
 .container .content{}
@@ -307,7 +307,7 @@ nav ul, nav ol{margin:0; padding:0; list-style:none;}
 #mainav .drop::after, #mainav li li .drop::after, #breadcrumb li a::after, .sidebar nav a::after{position:absolute; font-family:"Font Awesome\ 5 Free"; font-weight:900; font-size:10px; line-height:10px;}
 
 /* Top Navigation */
-#mainav{}
+#mainav{margin: 10px 0px;color: #000000; float: right;}
 #mainav ul{text-transform:uppercase;}
 #mainav ul ul{z-index:9999; position:absolute; width:180px; text-transform:none; text-align:left;}
 #mainav ul ul ul{left:180px; top:0;}
@@ -428,7 +428,7 @@ label span{color:#FF0000; background-color:inherit;}
 input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 
 .overlay{color:#FFFFFF; background-color:inherit;}
-.overlay::after{color:inherit; background-color:rgba(0,0,0,.55);}
+.overlay::after{color:inherit; background-color:rgba(0,0,0,.65);}
 .overlay.light{color:#474747;}
 .overlay.light::after{background-color:rgba(255,255,255,.7);}
 
@@ -486,10 +486,10 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 
 
 /* Navigation */
-#mainav{color:#FFFFFF; background-color:#373737;}
+#mainav{color:#FFFFFF;	}
 #mainav li a{color:inherit;}
 #mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#AA0000; background-color:inherit;}
-#mainav li li a, #mainav .active li a{color:#373737; background-color:rgba(210,210,210,0.9);/* #AA0000 */ border-color:rgba(0,0,0,.9);}
+#mainav li li a, #mainav .active li a{color:#373737; background-color:rgb(210,210,210);/* #AA0000 */ border-color:rgba(0,0,0,.9);}
 #mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:#AA0000;}
 #mainav form select{color:#474747; background-color:#FFFFFF;}
 
@@ -599,4 +599,11 @@ table a, #comments a{background-color:inherit;}
 
 	.font-x2{font-size:1.4rem;}
 	.font-x3{font-size:1.6rem;}
+}
+#velkyvlek-cenik tr td {
+	text-align: center;
+}
+
+#velkyvlek-cenik tr td.first {
+	text-align: left;
 }
